# routes/user.js
@@ -57,7 +57,7 @@ router.get('/favorites', async (req,res,next) => {
 /**
  * This path returns the user's recipes that were created by the logged-in user
  */
-router.get('/recipes', async (req,res,next) => {
+router.get('/myrecipes/preview', async (req,res,next) => {
   try{
     const username = req.session.username;
     const recipes = await user_utils.getUsersRecipes(username);
@@ -68,24 +68,42 @@ router.get('/recipes', async (req,res,next) => {
 });
 
 /**
- * This path gets body with recipe parameters and save this recipe in the user's list of the logged-in user
+ * This path returns the user's recipes that were created by the logged-in user
  */
-router.post('/recipes', async (req,res,next) => {
+router.get('/myrecipes/fullview', async (req,res,next) => {
   try{
     const username = req.session.username;
-    const { title, image, readyInMinutes, vegetarian, vegan, glutenFree, ingredients, instructions, servings } = req.body;
+    const title = req.body.recipeTitle;
+    const recipes = await user_utils.getOneUserRecipe(username, title);
+    res.status(200).send(recipes);
+  } catch(error){
+    next(error); 
+  }
+});
+
+/**
+ * This path gets body with recipe parameters and save this recipe in the user's list of the logged-in user
+ */
+router.post('/recipes', async (req, res, next) => {
+  try {
+    const username = req.session.username;
+    const { title, picture, prepTime, isVegetarian, isVegan, isGlutenFree, ingredients, instructions, servings } = req.body;
 
     // Convert boolean values to 0 and 1
-    const vegetarianInt = vegetarian ? 1 : 0;
-    const veganInt = vegan ? 1 : 0;
-    const glutenFreeInt = glutenFree ? 1 : 0;
+    const vegetarianInt = isVegetarian ? 1 : 0;
+    const veganInt = isVegan ? 1 : 0;
+    const glutenFreeInt = isGlutenFree ? 1 : 0;
 
-    await user_utils.createUserRecipe(username, title, image, readyInMinutes, vegetarianInt, veganInt, glutenFreeInt, ingredients, instructions, servings);
-    res.status(200).send("The Recipe successfully added as new recipe");
-    } catch(error){
+    // Convert string numbers to integers if needed
+    const prepTimeInt = parseInt(prepTime, 10);
+    const servingsInt = parseInt(servings, 10);
+
+    await user_utils.createUserRecipe(username, title, picture, prepTimeInt, vegetarianInt, veganInt, glutenFreeInt, ingredients, instructions, servingsInt);
+    res.status(200).send({ success: true, message: "The Recipe successfully added as new recipe" });
+  } catch (error) {
     next(error);
   }
-})
+});
 
 
 module.exports = router;
